<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="#006400">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:backgroundTint="#90EE90"
        android:textColor="#000"
        android:layout_marginTop="30dp"
        android:padding="15dp" />

    <TextView
        android:id="@+id/signup_link"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/create_account_prompt"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
