<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="#006400">

    <TextView
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_title"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/code"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_button"
        android:backgroundTint="#90EE90"
        android:textColor="#000"
        android:layout_marginTop="30dp"
        android:padding="15dp" />

</LinearLayout>
